--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -10,7 +10,7 @@
 
   @include breakpoint(md) {
     align-items: flex-start;
-    margin: 0 56px 90px;
+    margin: 0 56px 50px;
     padding: 28px 0 35px;
     border-bottom: 1px solid var(--grayish-blue);
   }
